--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Andy Bush |Web Development Student|</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -8,68 +9,63 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <a href="index.html" id="logo">
-        <h1>Andy Bush</h1>
-        <h2>Web Development Student</h2>
-      </a>
-      <nav>
-        <ul>
-          <li><a href="index.html" class="selected">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+        <a href="index.html" id="logo">
+            <h1>Andy Bush</h1>
+            <h2>Web Development Student</h2>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="selected">Portfolio</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <div id="wrapper">
-      <section>
-        <ul id="gallery">
-          <li>
-            <a href="photos/5milecrib.jpg">
-              <img src="photos/5milecrib.jpg" alt="">
-              <p>Picture out on the frozen lake in front of the 5 mile crib.</p>
-            </a>
-          </li>
-          <li>
-            <a href="photos/frozenClev.jpg">
-              <img src="photos/frozenClev.jpg" alt="">
-              <p>Early morning picture of Cleveland from out on the lake.</p>
-            </a>
-          </li>
-          <li>
-            <a href="photos/frozenClev2.jpg">
-              <img src="photos/frozenClev2.jpg" alt="">
-              <p>My brother took this picture on our hike out to the 5 mile crib.</p>
-            </a>
-          </li>
-          <li>
-            <a href="photos/myHarley.jpg">
-              <img src="photos/myHarley.jpg" alt="">
-              <p>Keep an eye out for my stolen Harley!</p>
-            </a>
-          </li>
-          <li>
-            <a href="photos/profilepic2.jpg">
-              <img src="photos/profilepic2.jpg" alt="">
-              <p>This is me.</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://codepen.io/andycbush/full/dMbKJq/">
-              <img src="http://cdn2.denofgeek.us/sites/denofgeekus/files/styles/insert_main_wide_image/public/7/82//mulder_smoking_man_talitha_cumi.jpg?itok=Nqz1VYMs" alt="">
-              <p>Click on this pic to go to a tribute page I made for a FreeCodeCamp exercise.</p>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <footer>
-        <a href="http://twitter.com"><img src="img/twitter-wrap.png" alt="twitter logo" class="social-icon"></a>
-        <a href="http://facebook.com/andycbush"><img src="img/facebook-wrap.png" alt="Facebook logo" class="social-icon"></a>
-        <p>&copy; 2016 Andy Bush.</p>
-      </footer>
+        <section>
+            <ul id="gallery">
+                <li>
+                    <a href="http://andycbush.github.io/ohio-quiz/">
+                        <img src="photos/ohioquiz.png" alt="">
+                        <p>This app quizzes you on your knowledge of the state of Ohio. The app uses JavaScript, jQuery, HTML and CSS.</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://andycbush.github.io/my-api-hack-project/">
+                        <img src="photos/numberTrivia.png" alt="">
+                        <p>This app uses ajax and a 3rd party API. The user enters a number, and the app returns a piece of trivia based upon the number provided.The app uses JavaScript, jQuery, HTML and CSS.</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://andycbush.github.io/my-angular-weatherApp/#/">
+                        <img src="photos/weatherforecastApp.png" alt="">
+                        <p>This app provides a weather forecast based upon a city entered by the user, or by allowing the browser to use your geolocation. A simple forecast for 2, 5, or 7 days can be returned. The app uses Angular and Boostrap.</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://codepen.io/andycbush/full/dMbKJq/">
+                        <img src="http://cdn2.denofgeek.us/sites/denofgeekus/files/styles/insert_main_wide_image/public/7/82//mulder_smoking_man_talitha_cumi.jpg?itok=Nqz1VYMs" alt="">
+                        <p>This is one of my first projects. This was done on Codepen using just HTML/CSS and Bootstrap.</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="" alt="">
+                        <p>My node project is for a password protected blog. It is currently in progress.</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <footer>
+            <a href="http://twitter.com"><img src="img/twitter-wrap.png" alt="twitter logo" class="social-icon"></a>
+            <a href="http://facebook.com/andycbush"><img src="img/facebook-wrap.png" alt="Facebook logo" class="social-icon"></a>
+            <p>&copy; 2016 Andy Bush.</p>
+        </footer>
     </div>
-  </body>
-</html>
+</body>
 
+</html>
