--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Andy Bush |Web Development Student|</title>
+    <title>Andy Bush |Web Development|</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
@@ -14,7 +14,7 @@
     <header>
         <a href="index.html" id="logo">
             <h1>Andy Bush</h1>
-            <h2>Web Development Student</h2>
+            <h2>Web Development</h2>
         </a>
         <nav>
             <ul>
@@ -28,8 +28,8 @@
         <section>
             <img src="photos/profilepic.jpg" alt="photo of me" class="profile-photo">
             <h3>About</h3>
-            <p>Hi, I'm Andy Bush! This is my website where I will demonstrate my progress as a webdev student.</p>
-            <p>I am looking for an junior web devevelopment position. Recently, I completed the Thinkful web development program. I'm proficient JavaScript, jQuery, Angular, Node, HTML/CSS and Bootstrap. I have also completed training with CodeAcademy, FreeCodeCamp, and TreeHouse.</p>
+            <p>Hi, I'm Andy Bush! This is my website where I will present my webdev projects.</p>
+            <p>I am looking for a web devevelopment position. Recently, I completed the Thinkful web development program. I'm proficient JavaScript, jQuery, Angular, Node, HTML/CSS and Bootstrap. I have also completed training with CodeAcademy, FreeCodeCamp, and TreeHouse.</p>
             <p>I attended The University of Akron where I graduated with a B.A. in Economics, and also with an MBA. I worked in contract management for 8 years with the Department of Defense. I decided that I was ready for something new so I jumped into coding. The more I learn about coding, the more interesting it becomes.</p>
         </section>
         <footer>
