--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Andy Bush |Web Development Student|</title>
+    <title>Andy Bush |Web Development|</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <a href="index.html" id="logo">
-        <h1>Andy Bush</h1>
-        <h2>Web Development Student</h2>
-      </a>
-      <nav>
-        <ul>
-          <li><a href="index.html">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html" class="selected">Contact</a></li>
-        </ul>
-      </nav>
+        <a href="index.html" id="logo">
+            <h1>Andy Bush</h1>
+            <h2>Web Development</h2>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Portfolio</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html" class="selected">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <div id="wrapper">
-      <section id="primary">
-        <h3>General Information</h3>
-        <p></p>
-        <p>If you think I might be a good fit for your orginization, I would like to hear from you.</p>
-        <p>Please email me for further contact info.</p>
-        <p>Thanks,</p>
-        <p>Andy</p>
-      </section>
-      <section id="secondary">
-        <h3>Contact Details</h3>
-         <ul class="contact-info">
-           <li class="phone"><a href="tel: 330 606 2840"></a></li>
-           <li class="mail"><a href="mailto:andycbush@yahoo.com">andycbush@yahoo.com</a></li>
-           <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=??">@andycbush76</a></li>
-         </ul>
-      </section>
-      <footer>
-        <a href="http://twitter.com"><img src="img/twitter-wrap.png" alt="twitter logo" class="social-icon"></a>
-        <a href="http://facebook.com/andycbush"><img src="img/facebook-wrap.png" alt="Facebook logo" class="social-icon"></a>
-        <p>&copy; 2016 Andy Bush.</p>
-      </footer>
+        <section id="primary">
+            <h3>General Information</h3>
+            <p></p>
+            <p>If you think I might be a good fit for your orginization, I would like to hear from you.</p>
+            <p>Please email me for further contact info.</p>
+            <p>Thanks,</p>
+            <p>Andy</p>
+        </section>
+        <section id="secondary">
+            <h3>Contact Details</h3>
+            <ul class="contact-info">
+                <li class="phone">
+                    <a href="tel: 330 606 2840"></a>
+                </li>
+                <li class="mail"><a href="mailto:andycbush@yahoo.com">andycbush@yahoo.com</a></li>
+                <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=??">@andycbush76</a></li>
+            </ul>
+        </section>
+        <footer>
+            <a href="http://twitter.com"><img src="img/twitter-wrap.png" alt="twitter logo" class="social-icon"></a>
+            <a href="http://facebook.com/andycbush"><img src="img/facebook-wrap.png" alt="Facebook logo" class="social-icon"></a>
+            <p>&copy; 2016 Andy Bush.</p>
+        </footer>
     </div>
-  </body>
+</body>
+
 </html>
