--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <a href="index.html" id="logo">
             <h1>Andy Bush</h1>
-            <h2>Web Development Student</h2>
+            <h2>Web Development</h2>
         </a>
         <nav>
             <ul>
@@ -29,31 +29,31 @@
         <section>
             <ul id="gallery">
                 <li>
-                    <a href="http://andycbush.github.io/ohio-quiz/">
+                    <a href="http://andycbush.github.io/ohio-quiz/" target="_blank">
                         <img src="photos/ohioquiz.png" alt="">
                         <p>This app quizzes you on your knowledge of the state of Ohio. The app uses JavaScript, jQuery, HTML and CSS.</p>
                     </a>
                 </li>
                 <li>
-                    <a href="https://andycbush.github.io/my-api-hack-project/">
+                    <a href="https://andycbush.github.io/my-api-hack-project/" target="_blank">
                         <img src="photos/numberTrivia.png" alt="">
                         <p>This app uses ajax and a 3rd party API. The user enters a number, and the app returns a piece of trivia based upon the number provided.The app uses JavaScript, jQuery, HTML and CSS.</p>
                     </a>
                 </li>
                 <li>
-                    <a href="https://andycbush.github.io/my-angular-weatherApp/#/">
+                    <a href="https://andycbush.github.io/my-angular-weatherApp/#/" target="_blank">
                         <img src="photos/weatherforecastApp.png" alt="">
                         <p>This app provides a weather forecast based upon a city entered by the user, or by allowing the browser to use your geolocation. A simple forecast for 2, 5, or 7 days can be returned. The app uses Angular and Boostrap.</p>
                     </a>
                 </li>
                 <li>
-                    <a href="http://codepen.io/andycbush/full/dMbKJq/">
+                    <a href="http://codepen.io/andycbush/full/dMbKJq/" target="_blank">
                         <img src="http://cdn2.denofgeek.us/sites/denofgeekus/files/styles/insert_main_wide_image/public/7/82//mulder_smoking_man_talitha_cumi.jpg?itok=Nqz1VYMs" alt="">
                         <p>This is one of my first projects. This was done on Codepen using just HTML/CSS and Bootstrap.</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" target="_blank">
                         <img src="" alt="">
                         <p>My node project is for a password protected blog. It is currently in progress.</p>
                     </a>
